--- a/app/views/event/event.scala.html
+++ b/app/views/event/event.scala.html
@@ -41,9 +41,12 @@
         </div>
 
         <div class="row bg-color">
-            <div class="col-xs-12 col-md-4 col-lg-3">
+            <div class="col-xs-12 col-md-4">
                 @views.html.event.eventDateSelector(event)
+
                 @views.html.event.eventDateSuggestionButton(event)
+                @views.html.event.eventDateSuggestionForm(eventDateSuggestionForm)
+
                 @eventLikeForm
                 @shared.fbShare(shareUrl)
 
@@ -55,9 +58,8 @@
             </div>
 
             @views.html.event.eventBookForm(eventBookingForm)
-            @views.html.event.eventDateSuggestionForm(eventDateSuggestionForm)
 
-            <div class="col-xs-12 col-md-8 col-lg-9 bg-color">
+            <div class="col-xs-12 col-md-8 bg-color">
                 @if(!flash.isEmpty) {
                     <div class="col-xs-12 margin-top">@shared.flashmsg(flash)</div>
                 }
@@ -86,20 +88,21 @@
                 <article>
                     @views.html.event.eventPropertiesList(eventPropertyList)
                 </article>
+
+                @defining(event.getEventImages.asScala) { eventImages =>
+                    @if(eventImages.nonEmpty) {
+                        <div class="event-more-images">
+                        @for(eventImage <- eventImages) {
+                            <div class="col-xs-4">
+                                <div class="thumbnail">
+                                @shared.img(routes.ImageController.eventNormal(eventImage.getStoreId).url, cssClass = "img-responsive")
+                                </div>
+                            </div>
+                        }
+                        </div>
+                    }
+                }
             </div>
         </div>
-        @defining(event.getEventImages.asScala) { eventImages =>
-            @if(eventImages.nonEmpty) {
-                <div class="row event-more-images">
-                @for(eventImage <- eventImages) {
-                    <div class="col-xs-4">
-                        <div class="thumbnail">
-                            @shared.img(routes.ImageController.eventNormal(eventImage.getStoreId).url, cssClass = "img-responsive")
-                        </div>
-                    </div>
-                }
-                </div>
-            }
-        }
     </div>
 }
