--- a/app/views/event/eventDateSelector.scala.html
+++ b/app/views/event/eventDateSelector.scala.html
@@ -1,10 +1,14 @@
 @(event: models.Event)(implicit messages: Messages)
 
-<h3 class="event-date-list-header text-center hidden">@Messages("event.choose-date.header")</h3>
-<div id="event-date-list-picker"
-    data-event-uuid="@event.objectId"
-    data-get-all-available-dates-route="@{routes.EventPageController.getAllAvailableDatesJSON()}"
-    data-get-time-route="@{routes.EventPageController.getEventTimesForDateAJAX()}"
-    class="inline-date-selector animated"
-    style="display: none"></div>
-<div id="event-date-list-result" class="event-date-list-result"></div>
+<h3 class="event-date-list-header text-center">@Messages("event.choose-date.header")</h3>
+<div class="row">
+    <div class="col-xs-12 col-md-10 col-md-offset-1">
+        <div id="event-date-list-picker"
+            data-event-uuid="@event.objectId"
+            data-get-all-available-dates-route="@{routes.EventPageController.getAllAvailableDatesJSON()}"
+            data-get-time-route="@{routes.EventPageController.getEventTimesForDateAJAX()}"
+            class="inline-date-selector animated"
+            style="display: none"></div>
+    </div>
+</div>
+<div id="event-date-list-result" class="event-date-list-result hidden"></div>
