--- a/app/views/event/suggestionForm.scala.html
+++ b/app/views/event/suggestionForm.scala.html
@@ -1,14 +1,15 @@
-@(eventDateSuggestionForm: Form[models.formdata.EventDateSuggestionForm])(implicit messages: Messages)
+@(eventDateSuggestionForm: Form[models.formdata.EventDateSuggestionForm], memberUser: Option[UserCredential])(implicit messages: Messages)
 @implicitFieldConstructor = @{ b3.vertical.fieldConstructor }
 
 <div id="date-suggestion-form" class="margin-top event-cta-form hidden">
+    @if(memberUser.isDefined) {
     <div class="panel panel-green panel-date-suggestion-form">
         <div class="panel-heading">@Messages("event.suggest.heading")</div>
         <div class="panel-body">
             @b3.form(action=controllers.routes.EventPageController.addDateSuggestionSubmit(), 'enctype -> "multipart/form-data"){
 
                 @b3.inputWrapped("date",
-                    eventDateSuggestionForm("date"),
+                    eventDateSuggestionForm("suggest-date"),
                     'class -> "date-input",
                     'placeholder -> Messages("event.edit.add.date.validation.format"),
                     '_label -> Messages("event.suggest.date"),
@@ -21,7 +22,7 @@
                     </div>
                 }
                 @b3.inputWrapped("time",
-                    eventDateSuggestionForm("time"),
+                    eventDateSuggestionForm("suggest-time"),
                     'class -> "time-input",
                     'placeholder -> Messages("event.edit.add.time.validation.format"),
                     '_label -> Messages("event.suggest.time"),
@@ -34,13 +35,16 @@
                     </div>
                 }
 
-                @b3.select(eventDateSuggestionForm("guests"), helper.options("1"->"1","2"->"2","3"->"3","4"->"4","5"->"5","6"->"6","7"->"7","8"->"8","9"->"9"), '_label -> Messages("event.book.nr-of-guests.label"))
-                @b3.textarea(eventDateSuggestionForm("comment"), 'value -> Messages("event.suggest.comment.text"), 'class -> "comment-field", '_label -> Messages("event.suggest.comment.label"))
+                @b3.select(eventDateSuggestionForm("suggest-guests"), helper.options("1"->"1","2"->"2","3"->"3","4"->"4","5"->"5","6"->"6","7"->"7","8"->"8","9"->"9"), '_label -> Messages("event.book.nr-of-guests.label"))
+                @b3.textarea(eventDateSuggestionForm("suggest-comment"), 'value -> Messages("event.suggest.comment.text"), 'class -> "comment-field", '_label -> Messages("event.suggest.comment.label"))
 
-                @helper.inputHidden(eventDateSuggestionForm("eventId"), 'class -> "event-uuid")
+                @helper.inputHidden(eventDateSuggestionForm("suggest-eventId"), 'class -> "suggest-event-uuid")
                 <strong>@Messages("event.suggest.submit.help")</strong>
                 @b3.submit('class -> "btn btn-lg btn-orange"){ <span class="glyphicon glyphicon-calendar"></span> @Messages("event.suggest.submit") }
             }
         </div>
     </div>
+    }else{
+        @views.html.event.notLoggedIn()
+    }
 </div>
