--- a/app/views/event/addOrEdit.scala.html
+++ b/app/views/event/addOrEdit.scala.html
@@ -184,7 +184,7 @@
                         </div>
 
 
-                        <div class="step">
+                        <div id="edit-date-time" class="step">
                             <div class="row">
                                 <div class="col-xs-12">
                                     <h3>@Messages("event.edit.add.date-time.header.date")</h3>
