--- a/app/views/event/bookingSuccess.scala.html
+++ b/app/views/event/bookingSuccess.scala.html
@@ -14,61 +14,17 @@
 
         <div class="col-xs-12">
             <div class="jumbotron">
-                <h1>@Messages("event.book.success.header")</h1>
+                <h1><span class="glyphicon glyphicon-ok text-green"></span> @Messages("event.book.success.header")</h1>
                 <p>@Html(Messages("event.book.success.body", eventBookingSuccess.email))</p>
 
-                <ul class="list-group big-margin-top">
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-md-3">@Messages("event.book.booking-number")</div>
-                            <div class="col-md-9">@eventBookingSuccess.bookingNumber</div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-md-3"><span class="glyphicon glyphicon-calendar"></span> @Messages("event.book.chosen.date")</div>
-                            <div class="col-md-9">@eventBookingSuccess.date</div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-md-3"><span class="glyphicon glyphicon-time"></span> @Messages("event.book.chosen.time")</div>
-                            <div class="col-md-9">@eventBookingSuccess.time</div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-md-3"><span class="glyphicon glyphicon-user"></span> @Messages("event.book.nr-of-guests.label")</div>
-                            <div class="col-md-9">@eventBookingSuccess.nrOfGuests.toString</div>
-                        </div>
-                    </li>
-                    @if(eventBookingSuccess.phoneNumberToHost.isDefined){
-                        <li class="list-group-item">
-                            <div class="row">
-                                <div class="col-md-3"><span class="glyphicon glyphicon-earphone"></span> @Messages("event.prop.phone")</div>
-                                <div class="col-md-9">@eventBookingSuccess.phoneNumberToHost.get</div>
-                            </div>
-                        </li>
-                    }
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-md-3"><span class="glyphicon glyphicon-map-marker"></span> @Messages("event.prop.address")</div>
-                            <div class="col-md-9">
-                                @eventBookingSuccess.locationAddress<br>
-                                @eventBookingSuccess.locationZipCode<br>
-                            @eventBookingSuccess.locationCity
-                            </div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-md-3"><strong>@Messages("event.book.chosen.total-cost")</strong></div>
-                            <div class="col-md-9"><strong>@Messages("event.price.currency") eventBookingSuccess.totalCost @Messages("event.price.currency.end")</strong></div>
-                        </div>
-                    </li>
-                </ul>
+                @views.html.event.bookingSuccessDetails(eventBookingSuccess)
 
-                <button class="btn btn-primary btn-lg margin-top" onclick="window.print();"><span class="glyphicon glyphicon-print"></span> @Messages("event.book.success.print")</button>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <a class="btn btn-primary btn-lg pull-left margin-top" href="@eventBookingSuccess.eventLink"><span class="glyphicon glyphicon-chevron-left"></span> @Messages("event.book.success.back")</a>
+                        <button class="btn btn-primary btn-lg pull-right margin-top" onclick="window.print();"><span class="glyphicon glyphicon-print"></span> @Messages("event.book.success.print")</button>
+                    </div>
+                </div>
             </div>
         </div>
 
