--- a/app/views/event/event.scala.html
+++ b/app/views/event/event.scala.html
@@ -41,11 +41,11 @@
         </div>
 
         <div class="row bg-color">
-            <div class="col-xs-12 col-md-4">
-                @views.html.event.bookingDatePicker(event)
-                @views.html.event.bookingForm(eventBookingForm, memberUser)
-                @views.html.event.suggestionButton(event)
-                @views.html.event.suggestionForm(eventDateSuggestionForm, memberUser)
+            <div class="col-xs-12 col-md-4 margin-top">
+                @views.html.event.bookingDatePicker(event, isThisMyEvent)
+                @views.html.event.bookingForm(eventBookingForm, memberUser, isThisMyEvent)
+                @views.html.event.suggestionButton(event, isThisMyEvent)
+                @views.html.event.suggestionForm(eventDateSuggestionForm, memberUser, isThisMyEvent)
 
                 @eventLikeForm
                 @shared.fbShare(shareUrl)
